--- a/main.html
+++ b/main.html
@@ -4,11 +4,60 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">	
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+		<h1 style="text-align:center">Internship Form</h1>
+		<form class="row g-3">
+			<div class="col-md-4">
+		    <label for="first-name-input" class="form-label">First Name</label>
+		    <input type="text" class="form-control" id="first-name-input">
+		  </div>
+			<div class="col-md-4">
+		    <label for="last-name-input" class="form-label">Last Name</label>
+		    <input type="text" class="form-control" id="last-name-input">
+		  </div>
+		  <div class="col-md-4">
+			<label for="email-input" class="form-label">Email Address</label>
+			<input type="email" class="form-control" id="email-input">
+		  </div>
+		<div class="col-md-4">
+			<label for="college-input" class="form-label">College</label>
+			<input type="text" class="form-control" id="college-input">
+		  </div>
+		<div class="col-md-4">
+		    <label for="year-input" class="form-label">Graduation Year</label>
+		    <select id="year-input" class="form-select">
+		      <option selected>Choose...</option>
+		      <option>2020</option>
+		      <option>2021</option>
+		      <option>2022</option>
+		      <option>2023</option>
+		    </select>
+		</div>
+			<div class="col-md-4">
+			<label for="roll-no-input" class="form-label">Roll No.</label>
+			<input type="number" class="form-control" id="roll-no-input">
+		  </div>
+
+	<div class="col-12">
+	    <div class="form-check">
+	      <input class="form-check-input" type="checkbox" id="conditions-checkbox">
+	      <label class="form-check-label" for="conditions-checkbox">
+	        Agree to terms and conditions
+	    </label>
+	    </div>
+	</div>
+	<div class="col-12">
+		    <button type="submit" class="btn btn-primary">Submit form</button>
+	</div>
+		</form>
+	</div>
     <script type="text/javascript" src="./script.js">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </script>
 
 </body>
