--- a/main.html
+++ b/main.html
@@ -14,23 +14,23 @@
 		<form class="row g-3">
 			<div class="col-md-4">
 		    <label for="first-name-input" class="form-label">First Name</label>
-		    <input type="text" class="form-control" id="first-name-input">
+		    <input type="text" class="form-control" id="first-name-input" required>
 		  </div>
 			<div class="col-md-4">
 		    <label for="last-name-input" class="form-label">Last Name</label>
-		    <input type="text" class="form-control" id="last-name-input">
+		    <input type="text" class="form-control" id="last-name-input" required>
 		  </div>
 		  <div class="col-md-4">
 			<label for="email-input" class="form-label">Email Address</label>
-			<input type="email" class="form-control" id="email-input">
+			<input type="email" class="form-control" id="email-input" required>
 		  </div>
 		<div class="col-md-4">
 			<label for="college-input" class="form-label">College</label>
-			<input type="text" class="form-control" id="college-input">
+			<input type="text" class="form-control" id="college-input" required>
 		  </div>
 		<div class="col-md-4">
-		    <label for="year-input" class="form-label">Graduation Year</label>
-		    <select id="year-input" class="form-select">
+		    <label for="grad-year-select" class="form-label">Graduation Year</label>
+		    <select id="grad-year-select" class="form-select">
 		      <option selected>Choose...</option>
 		      <option>2020</option>
 		      <option>2021</option>
@@ -40,12 +40,12 @@
 		</div>
 			<div class="col-md-4">
 			<label for="roll-no-input" class="form-label">Roll No.</label>
-			<input type="number" class="form-control" id="roll-no-input">
+			<input type="text" class="form-control" id="roll-no-input" required>
 		  </div>
 
 	<div class="col-12">
 	    <div class="form-check">
-	      <input class="form-check-input" type="checkbox" id="conditions-checkbox">
+	      <input class="form-check-input" type="checkbox" id="conditions-checkbox" required>
 	      <label class="form-check-label" for="conditions-checkbox">
 	        Agree to terms and conditions
 	    </label>
