--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 		  </div>
 		<div class="col-md-4">
 		    <label for="grad-year-select" class="form-label">Graduation Year</label>
-		    <select id="grad-year-select" class="form-select">
+		    <select id="grad-year-select" class="form-select" required>
 		      <option selected>Choose...</option>
 		      <option>2020</option>
 		      <option>2021</option>
